create checkout spring rest api

--- a/release 1.0/02-backend/spring-boot-ecommerce/pom.xml
+++ b/release 1.0/02-backend/spring-boot-ecommerce/pom.xml
@@ -34,6 +34,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.26</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -42,6 +43,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 
 	<build>
 		<plugins>
