--- a/release 1.0/02-backend/spring-boot-ecommerce/src/main/resources/application.properties
+++ b/release 1.0/02-backend/spring-boot-ecommerce/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.data.rest.base-path=/api
 allowed.origins=http://localhost:4200
 
 spring.data.rest.detection-strategy=annotated
+
+okta.oauth2.client-id=0oa9einm4w6zXXFYh5d7
+okta.oauth2.issuer=https://dev-00737379.okta.com/oauth2/default
